--- a/asset/css/canvas.css
+++ b/asset/css/canvas.css
@@ -70,6 +70,27 @@
 
 }
 
+
 /* ===================== 
  End Canvas Happy Birthday
   ====================== */
+  /* Responsive adjustments */
+@media (max-width: 768px) {
+    .f4-news{
+        .news-hero {
+            display: flex;  
+            flex-direction: column;
+            height: 500px;
+              }
+              
+            .news-hero-main
+             .news-hero-item {
+                height: auto;
+              }
+              
+            .news-hero-secondary {
+                height: 240px;
+              }
+    }
+
+    }
