--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -129,9 +129,14 @@ h3 {
         background-color: var(--wb-color) !important;
         color: var(--bw-color) !important;
         border-color: var(--bw-color) !important;
+        border-radius: 5px;
     }
 }
-
+.btn-outline-dark.selected {
+    background-color: var(--wb-color) !important;
+    color: var(--bw-color) !important;
+    border-color: var(--bw-color) !important;
+}
 .bg-main {
     background-color: var(--main-color) !important;
 }
@@ -977,8 +982,8 @@ a.carousel-item.active.position-relative {
     }
 
     .news-hero {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
+        display: flex;
+ 
         grid-gap: 20px;
 
     }
@@ -988,6 +993,7 @@ a.carousel-item.active.position-relative {
         height: 500px;
         overflow: hidden;
         border-radius: 8px;
+        flex: 1 1 70%;
     }
 
     .news-overlay:before {
@@ -1024,6 +1030,7 @@ a.carousel-item.active.position-relative {
         display: flex;
         flex-direction: column;
         gap: 20px;
+        flex: 1 1 30%;
     }
 
     .news-hero-item {
@@ -1531,9 +1538,22 @@ a.carousel-item.active.position-relative {
 .border-left-orange {
     border-left: 6px solid var(--orange) !important;
 }
+.border-left-blue.selected {
+    border-left: 6px solid var(--blue) !important;
+}
+.border-left-orange.selected {
+    border-left: 6px solid var(--orange) !important;
+}
+.border-left-pink.selcted {
+    border-left: 6px solid var(--pink) !important;
+}
+
 .flatpickr-calendar{
     box-shadow: none !important;
     display: flex;
     flex-direction: column;
 align-items: center;
 justify-content: center;}
+.flatpickr-calendar.inline{
+    background-color: var(--card-color) !important;
+}
