--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1706,3 +1706,12 @@ justify-content: center;}
             padding: 0;
         }
     }
+    body:has(.responsive-menu.active) {
+        overflow: hidden;
+    }
+    @media (max-width: 991.98px) {
+        .responsive-menu.active {
+ 
+            overflow: auto;
+        }
+    }
